# Bandmates-android

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/dygames/bandmates/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/include/: AudioProcessor.h
app/src/main/java/com/dygames/bandmates/contribute/view/: ContributeActivity.kt
app/src/main/java/com/dygames/bandmates/feed/: FeedViewModel.kt
app/src/main/java/com/dygames/bandmates/feed/data/: DefaultFeedRepository.kt  FeedRepository.kt
app/src/main/java/com/dygames/bandmates/feed/model/: FeedMapper.kt  FeedModel.kt  FeedUIState.kt  ProjectModel.kt
app/src/main/java/com/dygames/bandmates/feed/view/: FeedActivity.kt
app/src/main/java/com/dygames/bandmates/fork/view/: ForkActivity.kt
app/src/main/java/com/dygames/bandmates/project/view/: ProjectActivity.kt
app/src/main/res/layout/: activity_contribute.xml  activity_feed.xml  activity_fork.xml  activity_project.xml  view_feed_category.xml  view_feed_project.xml  view_project_preview.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dygames/bandmates/: ExampleUnitTest.kt
domain/src/main/java/com/dygames/bandmates/domain/: Project.kt
domain/src/main/java/com/dygames/bandmates/feed/: Category.kt  Feed.kt  FeedRepository.kt
domain/src/main/java/com/dygames/bandmates/project/: Project.kt
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
